--- a/style.css
+++ b/style.css
@@ -65,11 +65,7 @@ body {
   border-radius: 0px 4px 4px 0px;
   transition: all 0.3s;
 }
-.task__btn:hover {
-  background: linear-gradient(-90deg, #074ee8, #fff);
-  color: #fff;
-  width: 50%;
-}
+
 .task__btn:focus {
   outline: 0;
 }
@@ -89,9 +85,7 @@ body {
   background: url(done-icon.svg) no-repeat center / 0px;
   cursor: pointer;
 }
-.task__done:hover {
-  background-size: 17px;
-}
+
 .task__text {
   width: 80%;
   text-align: left;
@@ -106,9 +100,20 @@ body {
   cursor: pointer;
   transition: all 0.3s;
 }
-.task__remove:hover {
-  background-color: #c5d7ff;
-  transform: scale(1.1);
+@media screen and (min-width: 992px) {
+  .task__remove:hover {
+    background-color: #c5d7ff;
+    transform: scale(1.1);
+  }
+  .task__done:hover {
+    background-size: 17px;
+  }
+
+  .task__btn:hover {
+    background: linear-gradient(-90deg, #074ee8, #fff);
+    color: #fff;
+    width: 50%;
+  }
 }
 
 .task__card.done p {
@@ -123,7 +128,7 @@ body {
   display: block;
   background: transparent;
   border: 0;
-  width: 90%;
+  width: 40%;
   height: 50px;
   margin: 0 auto;
   margin-bottom: 20px;
@@ -132,4 +137,10 @@ body {
 
 .error {
   border-bottom: 3px solid red;
+}
+
+@media screen and (max-width: 500px) {
+  .task__text {
+    width: 70%;
+  }
 }
